--- a/cuda/Dockerfile
+++ b/cuda/Dockerfile
@@ -1,38 +1,93 @@
-FROM ppc64le/ubuntu:16.04
-MAINTAINER NVIDIA CORPORATION <digits@nvidia.com>
+FROM webgpu/cuda:ppc64le-8.0-devel
 
-LABEL com.nvidia.volumes.needed="nvidia_driver"
+RUN [ "cross-build-start" ]
 
-RUN NVIDIA_GPGKEY_SUM=d1be581509378368edeec8c1eb2958702feedf3bc3d17011adbf24efacce4ab5 && \
-    NVIDIA_GPGKEY_FPR=ae09fe4bbd223a84b2ccfce3f60f4b3d7fa2af80 && \
-    apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/ppc64el/7fa2af80.pub && \
-    apt-key adv --export --no-emit-version -a $NVIDIA_GPGKEY_FPR | tail -n +5 > cudasign.pub && \
-    echo "$NVIDIA_GPGKEY_SUM  cudasign.pub" | sha256sum -c --strict - && rm cudasign.pub && \
-    echo "deb http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/ppc64el /" > /etc/apt/sources.list.d/cuda.list
+# Set CUDA_ROOT
+ENV CUDA_ROOT /usr/local/cuda/bin
 
-ENV CUDA_VERSION 8.0
-LABEL com.nvidia.cuda.version="8.0"
+# Follow directions found in
+# http://docs.opencv.org/3.2.0/d6/d15/tutorial_building_tegra_cuda.html
 
-ENV CUDA_PKG_VERSION 8-0=8.0.44-1
-RUN apt-get update && apt-get install -y --no-install-recommends \
-        cuda-nvrtc-$CUDA_PKG_VERSION \
-        cuda-nvgraph-$CUDA_PKG_VERSION \
-        cuda-cusolver-$CUDA_PKG_VERSION \
-        cuda-cublas-$CUDA_PKG_VERSION \
-        cuda-cufft-$CUDA_PKG_VERSION \
-        cuda-curand-$CUDA_PKG_VERSION \
-        cuda-cusparse-$CUDA_PKG_VERSION \
-        cuda-npp-$CUDA_PKG_VERSION \
-        cuda-cudart-$CUDA_PKG_VERSION && \
-    ln -s cuda-$CUDA_VERSION /usr/local/cuda && \
-    rm -rf /var/lib/apt/lists/*
+# Install dependencies
+RUN \ 
+    apt-get update && apt-get upgrade -y && \
+    apt-get install \
+        build-essential \
+        cmake \
+        git \
+        libglew-dev \
+        libtiff-dev \
+        zlib1g-dev \
+        libjpeg-dev \
+        libpng12-dev \
+        libjasper-dev \
+        libavcodec-dev \
+        libavformat-dev \
+        libavutil-dev \
+        libpostproc-dev \
+        libswscale-dev \
+        libeigen3-dev \
+        libtbb-dev \
+        libgtk2.0-dev \
+        pkg-config \
+        libatlas-base-dev \
+        gfortran \
+        libhdf5-dev \
+        python-dev \
+        python-numpy \
+        python-py \
+        python-pytest \
+        python-pip -y && \
+    apt-get autoclean && apt-get clean && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN echo "/usr/local/cuda/lib" >> /etc/ld.so.conf.d/cuda.conf && \
-    echo "/usr/local/cuda/lib64" >> /etc/ld.so.conf.d/cuda.conf && \
-    ldconfig
 
-RUN echo "/usr/local/nvidia/lib" >> /etc/ld.so.conf.d/nvidia.conf && \
-    echo "/usr/local/nvidia/lib64" >> /etc/ld.so.conf.d/nvidia.conf
+# Downloads and configure OpenCV
+ADD https://github.com/opencv/opencv/archive/3.2.0.tar.gz /root/opencv
+ADD https://github.com/opencv/opencv_contrib/archive/3.2.0.tar.gz /root/opencv_contrib
 
-ENV PATH /usr/local/nvidia/bin:/usr/local/cuda/bin:${PATH}
-ENV LD_LIBRARY_PATH /usr/local/nvidia/lib:/usr/local/nvidia/lib64:${LD_LIBRARY_PATH}
+RUN mv /root/opencv-3.2.0 /root/opencv && \
+    mv /root/opencv_contrib-3.2.0 /root/opencv_contrib
+
+RUN cd /root/opencv && \
+    mkdir build && \
+    cd build && \
+    cmake \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+        -DBUILD_PNG=OFF \
+        -DBUILD_TIFF=OFF \
+        -DBUILD_TBB=OFF \
+        -DBUILD_JPEG=OFF \
+        -DBUILD_JASPER=OFF \
+        -DBUILD_ZLIB=OFF \
+        -DBUILD_EXAMPLES=OFF \
+        -DBUILD_opencv_java=OFF \
+        -DBUILD_opencv_python2=ON \
+        -DBUILD_opencv_python3=OFF \
+        -DWITH_OPENCL=OFF \
+        -DWITH_OPENMP=OFF \
+        -DWITH_FFMPEG=ON \
+        -DWITH_GSTREAMER=OFF \
+        -DWITH_GSTREAMER_0_10=OFF \
+        -DWITH_CUDA=ON \
+        -DWITH_GTK=ON \
+        -DWITH_VTK=OFF \
+        -DWITH_TBB=ON \
+        -DWITH_1394=OFF \
+        -DWITH_OPENEXR=OFF \
+        -DCUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda \
+        -DCUDA_ARCH_BIN='3.0 3.5 5.0 6.0 6.2' \
+        -DCUDA_ARCH_PTX="" \
+        -DINSTALL_C_EXAMPLES=ON \
+        -DINSTALL_TESTS=OFF \
+        -DOPENCV_TEST_DATA_PATH=../opencv_extra/testdata \
+        .. &&\
+	cd ~/opencv/build && \
+    make -j $(nproc) VERBOSE=1 && \
+    make install && \
+    ldconfig && \
+
+    cp ~/opencv/build/lib/cv2.so /usr/local/lib/python2.7/dist-packages/
+
+RUN [ "cross-build-end" ]  
